# docs/swagger.json
@@ -312,6 +312,50 @@
                 }
             }
         },
+        "/chain/merkleroots/verify": {
+            "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "consumes": [
+                    "*/*"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "merkleroots"
+                ],
+                "summary": "Verifies merkle roots in the longest chain",
+                "parameters": [
+                    {
+                        "description": "JSON",
+                        "name": "merkleroots",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/merkleroots.merkleRootConfirmationRespose"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/chain/tip": {
             "get": {
                 "security": [
@@ -489,7 +533,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/domains.Webhook"
+                            "$ref": "#/definitions/notification.Webhook"
                         }
                     }
                 }
@@ -525,7 +569,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/domains.Webhook"
+                            "$ref": "#/definitions/notification.Webhook"
                         }
                     }
                 }
@@ -613,29 +657,6 @@
                 }
             }
         },
-        "domains.Webhook": {
-            "type": "object",
-            "properties": {
-                "active": {
-                    "type": "boolean"
-                },
-                "createdAt": {
-                    "type": "string"
-                },
-                "errorsCount": {
-                    "type": "integer"
-                },
-                "lastEmitStatus": {
-                    "type": "string"
-                },
-                "lastEmitTimestamp": {
-                    "type": "string"
-                },
-                "url": {
-                    "type": "string"
-                }
-            }
-        },
         "headers.blockHeaderResponse": {
             "type": "object",
             "properties": {
@@ -678,6 +699,43 @@
                     "type": "integer"
                 },
                 "state": {
+                    "type": "string"
+                }
+            }
+        },
+        "merkleroots.merkleRootConfirmationRespose": {
+            "type": "object",
+            "properties": {
+                "blockhash": {
+                    "type": "string"
+                },
+                "confirmed": {
+                    "type": "boolean"
+                },
+                "merkleRoot": {
+                    "type": "string"
+                }
+            }
+        },
+        "notification.Webhook": {
+            "type": "object",
+            "properties": {
+                "active": {
+                    "type": "boolean"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "errorsCount": {
+                    "type": "integer"
+                },
+                "lastEmitStatus": {
+                    "type": "string"
+                },
+                "lastEmitTimestamp": {
+                    "type": "string"
+                },
+                "url": {
                     "type": "string"
                 }
             }
